# CICD_Test_Pipeline

./: .dockerignore  .gitignore  Dockerfile  README.md  coverage.xml  docker-compose.yml  pyproject.toml  requirements-dev.txt  sonar-project.properties
.github/workflows/: ci.yml  deploy.yml  docker-image.yml  docker.yml  sonarqube.yml
config/: app.env
documents/: Task_2_Matrix_Testing.md  Task_2_Optimize_Layer_Caching.md  Task_4_Healthcheck_Instructions.md  Task_5_Port_Mapping.md
documents/cicd/: Task_2_Document_Update_Matrix_Testing.md  Task_3_Document_Update_Caching_Artifacts.md  Task_4_Document_Update_Build_Push_Docker_Image.md  Task_5_Document_Update_Deployment_Strategy.md
documents/docker/: Task_3_Multi_Stage_Build.md
documents/sonarqube/: Task_1_Setup_SonarQube_Server.md  Task_2_Project_Analysis.md  Task_3_GitHub_Actions_SonarQube.md  Task_4_Issue_Fixes.md  Task_5_Quality_Gate.md
scripts/: deploy.sh
src/: data_processing.py
tests/: test_app.py  test_data_processing.py
