[project]
name = "basic-ci-python-app"
version = "0.1.0"
description = "A basic Python application with GitHub Actions CI."
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
]

[project.optional-dependencies]
dev = [
    "black==24.10.0",
    "httpx==0.28.1",
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "ruff==0.8.6",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"
