[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "basic-ci-python-app"
version = "0.1.0"
description = "A basic Python application with GitHub Actions CI."
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
]

[project.optional-dependencies]
dev = [
    "black==24.10.0",
    "httpx==0.28.1",
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "ruff==0.8.6",
]

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
